# labs-system-c

./: .gitignore  CMakeLists.txt  README.md
fork/: CMakeLists.txt  main.c  test.c
fork/inc/: kernel.h  services.h  utils.h
fork/src/: kernel.c  services.c  utils.c
mpi/: main.c  run.sh
socket/: CMakeLists.txt  main.c
socket/inc/: client.h  common.h  iotty.h  links.h  urls.h
socket/src/: client.c  iotty.c  links.c  urls.c
thread/: CMakeLists.txt  benchmark.c  main.c
thread/images/: gnuplot-example.plt  plotter.plt
thread/inc/: grid.h  manager.h  worker.h
thread/src/: grid.c  manager.c  worker.c
web/: .gitignore  requirements.txt
web/app/: __init__.py
web/app/controller/: __init__.py  elements.py  render.py
web/app/model/: __init__.py  connect.py  query.py
web/app/view/: __init__.py  routes.py
web/app/view/templates/: figure.j2  index.j2
web/config/: db-docker.yaml  db.yaml
